force-app/main/default/objects/SurveyQuestion__c.object
<CustomObject>
    <description>Individual questions within a survey template</description>
    <fields>
        <fullName>SurveyTemplate__c</fullName>
        <label>Survey Template</label>
        <referenceTo>SurveyTemplate__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <description>The actual question text</description>
        <inlineHelpText>The question to ask the respondent</inlineHelpText>
        <label>Question Text</label>
        <length>500</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <description>Type of question</description>
        <inlineHelpText>NPS, CSAT, Text, MultipleChoice, Rating</inlineHelpText>
        <label>Question Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NPS</fullName>
                </value>
                <value>
                    <fullName>CSAT</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>MultipleChoice</fullName>
                    <label>Multiple Choice</label>
                </value>
                <value>
                    <fullName>Rating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Display order of the question</description>
        <label>Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this question required?</description>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <description>JSON options for MultipleChoice type</description>
        <inlineHelpText>JSON array of options, e.g. [&quot;Option 1&quot;,&quot;Option 2&quot;]</inlineHelpText>
        <label>Options</label>
        <length>500</length>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scale_Min__c</fullName>
        <description>Minimum value for Rating type</description>
        <label>Scale Min</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scale_Max__c</fullName>
        <description>Maximum value for Rating type</description>
        <label>Scale Max</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Question</label>
    <nameField>
        <label>Survey Question</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>